<resources>
    <string name="app_name">互农</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_logo">LogoActivity</string>
    <string name="app_right">Copyright © 2016 Geowind All Rights Reversed.</string>
    <string name="app_return">返回</string>
    <string name="immediate_register">立即注册</string>
    <string name="account">账号：</string>
    <string name="password">密码：</string>
    <string name="password_ensure">确认密码：</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">主页</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="request_to_login">未登录</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">电话/邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to DrawerArrow -->
    <string name="title_activity_drawer_arrow">DrawerArrowActivity</string>
    <string name="content_hint">Content</string>
    <string name="drawer_hint">Drawer</string>
    <string name="rounded">See Rounded</string>
    <string name="squared">See Squared</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_drawerArrow">主界面</string>


    <string name="smssdk_bind_mobile_show">注册或绑定手机演示</string>
    <string name="smssdk_contact">通讯录好友</string>
    <string name="smssdk_appkey_dialog_title">请输入您的应用信息</string>
    <string name="smssdk_appkey">AppKey</string>
    <string name="smssdk_appkey_hint">请输入您的AppKey</string>
    <string name="smssdk_appsecret">AppSecret</string>
    <string name="smssdk_appsecrethint">请输入您的AppSecret</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_friends">FriendsActivity</string>



</resources>
