<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical" >

    <!-- 顶部按钮 -->

    <LinearLayout
        android:id="@+id/linearLayout_loginAct_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/custom_green"
        >

        <ImageView
            android:id="@+id/img_login_return"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/custom_green"
            android:src="@drawable/common_arrow_left"
            android:layout_gravity="center"
            />
        <!--<Button-->
            <!--android:id="@+id/btn_login_return"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_weight="1"-->
            <!--android:drawableLeft="@drawable/navigationbar_back"-->
            <!--android:text="        返回"-->
            <!--android:background="@color/custom_green"-->
            <!--android:gravity="center_vertical"/>-->
        <TextView
            android:id="@+id/tv_login_return"
            android:text="返回"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/custom_green"
            android:gravity="center_vertical"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="登录界面"
            android:gravity="center"
            />
        <Button
            android:id="@+id/btn_login_regester"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/immediate_register"

            />
    </LinearLayout>

    <!-- Login progress -->

    <!-- <LinearLayout -->
    <!-- android:id="@+id/login_status" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_gravity="center" -->
    <!-- android:gravity="center_horizontal" -->
    <!-- android:orientation="vertical" -->
    <!-- android:visibility="gone" > -->


    <!-- <ProgressBar -->
    <!-- android:id="@+id/login_progress" -->
    <!-- style="?android:attr/progressBarStyleLarge" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_marginBottom="8dp" -->
    <!-- android:visibility="gone"/> -->


    <!-- <TextView -->
    <!-- android:id="@+id/login_status_message" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_marginBottom="16dp" -->
    <!-- android:fontFamily="sans-serif-light" -->
    <!-- android:text="@string/login_progress_signing_in" -->
    <!-- android:textAppearance="?android:attr/textAppearanceMedium" /> -->
    <!-- </LinearLayout> -->


    <!-- Login form -->


    <!-- <ScrollView -->
    <!-- android:id="@+id/login_form" -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="match_parent" > -->


    <!-- </ScrollView> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/edt_loginAct_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/edt_loginAct_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </LinearLayout>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:text="@string/action_sign_in_short"
            android:textStyle="bold"
            android:background="@color/custom_green"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

</LinearLayout>